<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/DisplayConta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="99+60"
        android:textColor="@android:color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/displayResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:text="159"
        android:textColor="@android:color/black"
        android:textSize="29sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DisplayConta" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="270dp"
        android:layout_height="372dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="#ececec"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayResultado"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_7"
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/btn_7" />

            <Button
                android:id="@+id/btn_8"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/btn_8" />

            <Button
                android:id="@+id/btn_9"
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_bright"
                android:text="@string/btn_9" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="77dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_4"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/btn_4" />

                <Button
                    android:id="@+id/btn_5"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/btn_5" />

                <Button
                    android:id="@+id/btn_6"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/btn_6" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_1"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/btn_1" />

                <Button
                    android:id="@+id/btn_2"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/btn_2" />

                <Button
                    android:id="@+id/btn_3"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/btn_3" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="146dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_ponto"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/btn_ponto" />

                <Button
                    android:id="@+id/btn_0"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/btn_0" />

                <Button
                    android:id="@+id/btn_igual"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:background="@android:color/holo_blue_bright"
                    android:text="@string/btn_igual" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="88dp"
        android:layout_height="365"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/displayResultado">

        <Button
            android:id="@+id/btn_apagar"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/btn_apagar" />

        <Button
            android:id="@+id/btn_soma"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/btn_soma" />

        <Button
            android:id="@+id/btn_menos"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/btn_menos" />

        <Button
            android:id="@+id/btn_multip"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/btn_multip" />

        <Button
            android:id="@+id/btn_divid"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:background="@android:color/holo_blue_bright"
            android:text="@string/btn_divid" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>